--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 <!-- Mensagem do passarinho -->
 <div class="passarinho-mensagem">
-  <p>🐦 <strong>O passarinho voltou para dar um último recado...</strong></p>
+  <p>🕊️ <strong>O passarinho voltou para dar um último recado...</strong></p>
   <p>
     Se preparem para se emocionar e receber a nossa homenagem,  
     preparada com todo o amor e carinho pela <strong>Turma do 3º Ano B</strong>. 💙  
