--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dia das Diretoras 💙 | 3ºB de Exatas</title>
-    <link rel="icon" href="CEIMM - LOGO.png"image>
+    <link rel="icon" href="CEIMM - LOGO.png" image />
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -13,7 +13,12 @@
     <header class="hero">
       <div class="overlay"></div>
       <div class="hero-content">
-        <img src="CEIMM - LOGO.png" alt="Logo CEIMM" title="Logo CEIMM" class="logo" />
+        <img
+          src="CEIMM - LOGO.png"
+          alt="Logo CEIMM"
+          title="Logo CEIMM"
+          class="logo"
+        />
         <h1>🕊️ Um passarinho nos contou que hoje é o Dia das Diretoras…</h1>
         <p>
           Mas antes de celebrarmos esse dia tão especial, temos algo ainda mais
@@ -24,94 +29,75 @@
         <div class="countdown-container">
           <p>⏳ Faltam</p>
           <div id="countdown"></div>
-<p>
-  para o fim das aulas! <br />
-  <small>(Encerram em 19 de dezembro de 2025)</small>
-</p>
+          <p>
+            para o fim das aulas! <br />
+            <small>(Encerram em 19 de dezembro de 2025)</small>
+          </p>
 
-<p class="mensagem-carinho">
-  💙 Mas não precisam ficar tristes...  
-  A gente vai continuar aqui, dentro dessa instituição,  
-  e com certeza vivendo no coração de vocês por muito tempo!  
-  Continuem acompanhando esse site e descubram o quão especiais vocês são —  
-  o quanto vocês são incríveis e inspiram cada um de nós. 🌟
-</p>
+          <p class="mensagem-carinho">
+            💙 Mas não precisam ficar tristes... A gente vai continuar aqui
+            marcados pela nossa história na instituição, e com certeza vivendo
+            no coração de vocês por muito tempo! Continuem acompanhando esse
+            site e descubram o quão especiais vocês são — o quanto vocês são
+            incríveis e inspiram cada um de nós. 🌟
+          </p>
         </div>
       </div>
     </header>
 
-<!-- Nossa Jornada -->
-<section class="journey">
-  <h2>✨ Uma história que começou separada, mas se uniu para fazer história.</h2>
+    <!-- Nossa Jornada -->
+    <section class="journey">
+      <h2>
+        ✨ Uma história que começou separada, mas se uniu para fazer história.
+      </h2>
+        <p>
+          Tudo começou lá no <strong>1º ano</strong>, quando ainda éramos
+          divididos entre o <strong>1ºA</strong> e o <strong>1ºB</strong>. Cada
+          turma com seu jeito, suas histórias e muitas expectativas para o que
+          viria pela frente. Foram tempos de adaptação, aprendizado e amizade,
+          que marcaram o início da nossa jornada no Ensino Médio.
+        </p>
+        <p>
+          No <strong>2º ano</strong> nos unimos e formamos o
+          <strong>2ºB</strong>, uma turma que logo se destacou. Ficamos
+          conhecidos pelas <strong>boas notas</strong>, pela dedicação e pela
+          frequência exemplar. Mostramos que, juntos, éramos capazes de ir além
+          — tornamo-nos uma verdadeira família escolar.
+        </p>
+        <p>
+          Agora, no <strong>3º B</strong>, encerramos essa linda trajetória.
+          Enfrentamos desafios, realizamos o <strong>SAEB</strong> com
+          comprometimento e nos despedimos dessa fase prontos para seguir rumo à
+          <strong>faculdade</strong>. Cada conquista nossa carrega um pedacinho
+          de tudo o que vivemos aqui.
+        </p>
+        <p>
+          É com o coração cheio de <strong>gratidão</strong> que deixamos nosso
+          agradecimento especial à <strong>direção da instituição</strong>, à
+          <strong>Liliana</strong> e à <strong>Rosalba</strong>. Obrigada por
+          acreditarem em nós, por cada palavra de incentivo, por todo carinho,
+          paciência e dedicação. Vocês foram fundamentais para que chegássemos
+          até aqui.
+        </p>
+        <p>
+          Encerramos esta etapa com orgulho e emoção, levando conosco
+          lembranças, aprendizados e laços que permanecerão para sempre.
+        </p>
+    </section>
 
-  <p>
-    No <strong>1º ano do Ensino Médio</strong>, tudo ainda era novidade. A gente estava
-    aprendendo como era o colégio, como eram as provas e, claro, como era
-    acordar cedo todos os dias. As turmas <strong>1ºA</strong> e <strong>1ºB</strong> seguiam
-    seus caminhos separadas — e, sinceramente, ninguém sabia muito bem o que
-    esperar. Estávamos imaturos, cheios de energia e com a cabeça em qualquer
-    lugar, menos em prova. 😅
-  </p>
-
-  <p>
-    Nessa época, ninguém precisava se preocupar com o <strong>SAEB</strong>, com o
-    <strong>ENEM</strong> ou com aquela tensão toda de futuro. A maior preocupação era
-    lembrar de trazer o uniforme completo e entregar o trabalho no prazo.
-  </p>
-
-  <p>
-    Mas aí vieram as <strong>férias do primeiro ano</strong>... e tudo começou a mudar.
-    Voltamos diferentes. Começaram as <strong>provas</strong>, os
-    <strong>trabalhos</strong>, o famoso <strong>blá blá blá do ENEM, do SAEB e da Prova
-    Paraná</strong>. A ficha começou a cair: agora era pra valer!
-  </p>
-
-  <p>
-    No <strong>2º ano do Ensino Médio</strong>, então, meu Deus... adrenalina pura!
-    Parecia que a gente já estava dentro da faculdade. Era
-    <strong>ENEM</strong> pra cá, <strong>SAEB</strong> pra lá, <strong>Prova Paraná</strong> no meio e aquele
-    monte de simulados que deixavam o coração acelerado. Mas, ao mesmo tempo,
-    foi o ano em que tudo se uniu. As turmas se juntaram, nascia o
-    <strong>2ºB de Exatas</strong> — e foi aí que a gente percebeu que estava construindo
-    algo especial.
-  </p>
-
-  <p>
-    O <strong>2ºB</strong> se tornou <strong>referência na escola</strong>: destaque em
-    <strong>nota</strong>, <strong>presença</strong> e <strong>desempenho</strong>. Era orgulho puro! E nada disso
-    teria acontecido sem a ajuda de quem sempre esteve por perto — nossas
-    <strong>pedagogas</strong>, <strong>professores</strong> e, claro, as nossas incríveis diretoras,
-    <strong>Liliana</strong> e <strong>Rosalba</strong>.
-  </p>
-
-  <p>
-    E agora, aqui estamos: o <strong>3ºB de Exatas</strong>. Participamos do
-    <strong>SAEB</strong>, estamos chegando no <strong>ENEM</strong> e com um pé (ou os dois 😅) na
-    <strong>universidade</strong>. Alguns vão para faculdades presenciais, outros para
-    cursos online, tem quem vá pra <strong>federal</strong>, <strong>estadual</strong> e até
-    <strong>particular</strong>. Cada um seguindo seu caminho, mas todos com uma base
-    sólida construída aqui.
-  </p>
-
-  <p>
-    Os destinos da nossa turma já estão se desenhando, e tudo isso é reflexo da
-    dedicação de uma equipe maravilhosa. Graças aos nossos
-    <strong>pedagogos</strong>, aos <strong>professores</strong> e às nossas diretoras
-    <strong>Liliana</strong> e <strong>Rosalba</strong>, tudo isso se tornou realidade. Porque, sem
-    elas, a escola não teria brilho. Sem elas, a escola não teria o mesmo
-    coração. 💙
-  </p>
-
-  <p><em>E foi assim que uma turma que começou separada… se uniu para fazer história.</em></p>
-</section>
-
-<!-- Foto do trote dos velhinhos -->
-<div class="trote-container">
-  <img src="trote-velhinhos.jpg" alt="Trote dos velhinhos - Turma 3ºB" title="Trote dos velhinhos - Turma 3ºB" class="trote-foto" />
-  <p class="legenda-trote">
-    👵👴 Nosso trote do terceirão — porque o 3ºB vive intensamente, até quando vira “idoso”! 💙
-  </p>
-</div>
+    <!-- Foto do trote dos velhinhos -->
+    <div class="trote-container">
+      <img
+        src="trote-velhinhos.jpg"
+        alt="Trote dos velhinhos - Turma 3ºB"
+        title="Trote dos velhinhos - Turma 3ºB"
+        class="trote-foto"
+      />
+      <p class="legenda-trote">
+        👵👴 Nosso trote do terceirão — porque o 3ºB vive intensamente, até
+        quando vira “idoso”! 💙
+      </p>
+    </div>
 
     <!-- Homenagem às Diretoras -->
     <section class="homenagem">
@@ -123,16 +109,26 @@
       <div class="diretoras">
         <!-- Card 1 -->
         <div class="card">
-          <img src="foto-liliana.jpg" alt="Diretora Liliana" title="Diretora Liliana" class="foto-diretora" />
+          <img
+            src="foto-liliana.jpg"
+            alt="Diretora Liliana"
+            title="Diretora Liliana"
+            class="foto-diretora"
+          />
           <h3>🎓 Liliana</h3>
           <p>
             Nossa diretora — exemplo de sabedoria, força e cuidado com cada
-            detalhe da escola.
+            detalhe do colégio.
           </p>
         </div>
         <!-- Card 2 -->
         <div class="card">
-          <img src="foto-rosalba.jpg" alt="Vice-diretora Rosalba" title="Vice-diretora Rosalba" class="foto-diretora" />
+          <img
+            src="foto-rosalba.jpg"
+            alt="Vice-diretora Rosalba"
+            title="Vice-diretora Rosalba"
+            class="foto-diretora"
+          />
           <h3>🌼 Rosalba</h3>
           <p>
             Nossa vice-diretora — sempre com aquele olhar atencioso e aquela
@@ -148,53 +144,61 @@
     </section>
 
     <!-- Vídeo Especial - Futuras Profissões -->
-<section class="video-profissoes">
-  <h2>🎥 Um presente inesquecível: nossas futuras profissões</h2>
+    <section class="video-profissoes">
+      <h2>🎥 Um presente inesquecível: nossas futuras profissões</h2>
 
-  <p>
-    Um dia antes da realização da nossa <strong>Prova do SAEB</strong>, no dia <strong>22/10/2025</strong>, 
-    recebemos uma surpresa que marcou nossos corações. 💙  
-    A nossa diretora <strong>Liliana</strong> preparou, com muito carinho, um vídeo com as nossas 
-    <strong>futuras profissões</strong> — um gesto cheio de amor, emoção e inspiração.
-  </p>
+      <p>
+        Um dia antes da realização da nossa <strong>Prova do SAEB</strong>, no
+        dia <strong>22/10/2025</strong>, recebemos uma surpresa que marcou
+        nossos corações. 💙 A nossa direção preparou,
+        com muito carinho, um vídeo com as nossas
+        <strong>futuras profissões</strong> — um gesto cheio de amor, emoção e
+        inspiração.
+      </p>
 
-  <p>
-    Teve riso, teve choro, teve orgulho e, acima de tudo, teve o reconhecimento do quanto 
-    a escola transforma o nosso dia a dia.  
-    Esse vídeo representa o impacto que o <strong>CEIMM</strong> e nossas diretoras têm em cada um de nós.
-  </p>
+      <p>
+        Teve riso, teve choro, teve orgulho e, acima de tudo, teve o
+        reconhecimento do quanto a instituição transforma o nosso dia a dia. Esse
+        vídeo representa o impacto que o <strong>CEIMM</strong> e nossas
+        diretoras têm em cada um de nós.
+      </p>
 
-  <video controls class="video-especial">
-    <source src="profissoes.mp4" type="video/mp4" />
-    Seu navegador não suporta a reprodução de vídeo.
-  </video>
+      <video controls class="video-especial">
+        <source src="profissoes.mp4" type="video/mp4" />
+        Seu navegador não suporta a reprodução de vídeo.
+      </video>
 
-  <p class="legenda-video">
-    💫 Um vídeo preparado com amor, por <strong>Liliana</strong> — nossa diretora, nossa inspiração.  
-    Obrigado por acreditar tanto em cada um de nós. 💙
-  </p>
-</section>
+      <p class="legenda-video">
+        💫 Um vídeo preparado com amor, pela <strong>direção</strong> — nossa inspiração. Agradecemos por acreditarem tanto em cada um de
+        nós. 💙
+      </p>
+    </section>
 
-<!-- Mensagem do passarinho -->
-<div class="passarinho-mensagem">
-  <p>🕊️ <strong>O passarinho voltou para dar um último recado...</strong></p>
-  <p>
-    Se preparem para se emocionar e receber a nossa homenagem,  
-    preparada com todo o amor e carinho pela <strong>Turma do 3º Ano B</strong>. 💙  
-  </p>
-  <p>
-    E lembrando: como estava escrito na carta,  
-    vocês <strong>precisam estar sendo gravadas neste momento</strong>, tá? 🎥  
-    A gente está em prova — realizando mais um passo rumo às nossas universidades —  
-    mas queremos ver a reação de vocês quando receberem essa surpresa.  
-  </p>
-  <a href="https://drive.google.com/file/d/1QjDvu0oxqSXn3AfQEorkFvwqIXtko0jn/view?usp=sharing" target="_blank" class="btn-surpresa">
-  🎬 Surpresa Extrema
-</a>
-  <p>
-    Beijinhos da <strong>Turma do 3º Ano B de Exatas!</strong> 💫
-  </p>
-</div>
+    <!-- Mensagem do passarinho -->
+    <div class="passarinho-mensagem">
+      <p>
+        🕊️ <strong>O passarinho voltou para dar um último recado...</strong>
+      </p>
+      <p>
+        Se preparem para se emocionar e receber a nossa homenagem, preparada com
+        todo o amor e carinho pela <strong>Turma do 3º Ano B</strong>. 💙
+      </p>
+      <p>
+        E lembrando: como estava escrito na carta, vocês
+        <strong>precisam estar sendo gravadas neste momento</strong>, tá? 🎥 A
+        gente está em prova — realizando mais um passo rumo às nossas
+        universidades — mas queremos ver a reação de vocês quando receberem essa
+        surpresa.
+      </p>
+      <a
+        href="https://drive.google.com/file/d/1QjDvu0oxqSXn3AfQEorkFvwqIXtko0jn/view?usp=sharing"
+        target="_blank"
+        class="btn-surpresa"
+      >
+        🎬 Surpresa Extrema
+      </a>
+      <p>Beijinhos da <strong>Turma do 3º Ano B de Exatas!</strong> 💫</p>
+    </div>
 
     <!-- Rodapé -->
     <footer>
@@ -220,9 +224,7 @@
         const hours = Math.floor(
           (distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)
         );
-        const minutes = Math.floor(
-          (distance % (1000 * 60 * 60)) / (1000 * 60)
-        );
+        const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
         const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
         countdown.innerHTML = `${days}d ${hours}h ${minutes}m ${seconds}s`;
@@ -233,30 +235,29 @@
     </script>
 
     <!-- Script Pop-up -->
-<script>
-  window.addEventListener("load", () => {
-    const popup = document.getElementById("popup-homenagem");
-    popup.classList.add("show");
+    <script>
+      window.addEventListener("load", () => {
+        const popup = document.getElementById("popup-homenagem");
+        popup.classList.add("show");
 
-    // Fecha automaticamente após 10 segundos
-    setTimeout(() => {
-      popup.classList.remove("show");
-    }, 5000);
-  });
-</script>
+        // Fecha automaticamente após 8 segundos
+        setTimeout(() => {
+          popup.classList.remove("show");
+        }, 8000);
+      });
+    </script>
 
     <!-- Pop-up para as diretoras -->
-<div id="popup-homenagem" class="popup">
-  <div class="popup-content">
-    <h2>💛 Olá, queridas diretoras Liliana e Rosalba!</h2>
-    <p>
-      Já separaram o lencinho pra se emocionar? 🥹<br />
-      Já estão sendo gravadas neste momento? 🎥<br /><br />
-      Pois bem... podemos continuar então. 💙<br />
-      <strong>Beijinhos da Turma do 3º Ano B!</strong>
-    </p>
-  </div>
-</div>
-
+    <div id="popup-homenagem" class="popup">
+      <div class="popup-content">
+        <h2>💛 Olá, queridas diretoras Liliana e Rosalba!</h2>
+        <p>
+          Já separaram o lencinho pra se emocionar? 🥹<br />
+          Já estão sendo gravadas neste momento? 🎥<br /><br />
+          Pois bem... podemos continuar então. 💙<br />
+          <strong>Beijinhos da Turma do 3º Ano B!</strong>
+        </p>
+      </div>
+    </div>
   </body>
 </html>
