--- a/index.html
+++ b/index.html
@@ -85,6 +85,37 @@
         </p>
     </section>
 
+<!-- Linha do Tempo: 1ºA, 1ºB e 2ºB -->
+<section class="linha-tempo">
+  <h2>📚 Onde tudo começou...</h2>
+
+  <div class="polaroid-container">
+    <div class="polaroid">
+      <img src="1A.jpg" alt="Turma 1ºA" title="Turma 1ºA" />
+      <p class="legenda-polaroid">
+        📘 1ºA — O início de muitas amizades e histórias!
+      </p>
+    </div>
+
+    <div class="polaroid">
+      <img src="1B.jpg" alt="Turma 1ºB" title="Turma 1ºB" />
+      <p class="legenda-polaroid">
+        📗 1ºB — Onde os sonhos começaram a se desenhar!
+      </p>
+    </div>
+
+    <div class="polaroid video-polaroid">
+      <video controls>
+        <source src="2B.mp4" type="video/mp4" />
+        Seu navegador não suporta a reprodução de vídeo.
+      </video>
+      <p class="legenda-polaroid">
+        💛 2ºB — A união que transformou tudo em amizade, risadas e conquistas!
+      </p>
+    </div>
+  </div>
+</section>
+
     <!-- Foto do trote dos velhinhos -->
     <div class="trote-container">
       <img
