--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           title="Logo CEIMM"
           class="logo"
         />
-        <h1>🕊️ Um passarinho nos contou que hoje é o Dia das Diretoras…</h1>
+        <h1>🕊️ Um passarinho nos contou que na Quarta-Feira foi o Dia das Diretoras…</h1>
         <p>
           Mas antes de celebrarmos esse dia tão especial, temos algo ainda mais
           emocionante pra lembrar:
@@ -50,71 +50,72 @@
       <h2>
         ✨ Uma história que começou separada, mas se uniu para fazer história.
       </h2>
-        <p>
-          Tudo começou lá no <strong>1º ano</strong>, quando ainda éramos
-          divididos entre o <strong>1ºA</strong> e o <strong>1ºB</strong>. Cada
-          turma com seu jeito, suas histórias e muitas expectativas para o que
-          viria pela frente. Foram tempos de adaptação, aprendizado e amizade,
-          que marcaram o início da nossa jornada no Ensino Médio.
-        </p>
-        <p>
-          No <strong>2º ano</strong> nos unimos e formamos o
-          <strong>2ºB</strong>, uma turma que logo se destacou. Ficamos
-          conhecidos pelas <strong>boas notas</strong>, pela dedicação e pela
-          frequência exemplar. Mostramos que, juntos, éramos capazes de ir além
-          — tornamo-nos uma verdadeira família escolar.
-        </p>
-        <p>
-          Agora, no <strong>3º B</strong>, encerramos essa linda trajetória.
-          Enfrentamos desafios, realizamos o <strong>SAEB</strong> com
-          comprometimento e nos despedimos dessa fase prontos para seguir rumo à
-          <strong>faculdade</strong>. Cada conquista nossa carrega um pedacinho
-          de tudo o que vivemos aqui.
-        </p>
-        <p>
-          É com o coração cheio de <strong>gratidão</strong> que deixamos nosso
-          agradecimento especial à <strong>direção da instituição</strong>, à
-          <strong>Liliana</strong> e à <strong>Rosalba</strong>. Obrigada por
-          acreditarem em nós, por cada palavra de incentivo, por todo carinho,
-          paciência e dedicação. Vocês foram fundamentais para que chegássemos
-          até aqui.
-        </p>
-        <p>
-          Encerramos esta etapa com orgulho e emoção, levando conosco
-          lembranças, aprendizados e laços que permanecerão para sempre.
-        </p>
+      <p>
+        Tudo começou lá no <strong>1º ano</strong>, quando ainda éramos
+        divididos entre o <strong>1ºA</strong> e o <strong>1ºB</strong>. Cada
+        turma com seu jeito, suas histórias e muitas expectativas para o que
+        viria pela frente. Foram tempos de adaptação, aprendizado e amizade, que
+        marcaram o início da nossa jornada no Ensino Médio.
+      </p>
+      <p>
+        No <strong>2º ano</strong> nos unimos e formamos o <strong>2ºB</strong>,
+        uma turma que logo se destacou. Ficamos conhecidos pelas
+        <strong>boas notas</strong>, pela dedicação e pela frequência exemplar.
+        Mostramos que, juntos, éramos capazes de ir além — tornamo-nos uma
+        verdadeira família escolar.
+      </p>
+      <p>
+        Agora, no <strong>3º B</strong>, encerramos essa linda trajetória.
+        Enfrentamos desafios, realizamos o <strong>SAEB</strong> com
+        comprometimento e nos despedimos dessa fase prontos para seguir rumo à
+        <strong>faculdade</strong>. Cada conquista nossa carrega um pedacinho de
+        tudo o que vivemos aqui.
+      </p>
+      <p>
+        É com o coração cheio de <strong>gratidão</strong> que deixamos nosso
+        agradecimento especial à <strong>direção da instituição</strong>, à
+        <strong>Liliana</strong> e à <strong>Rosalba</strong>. Obrigada por
+        acreditarem em nós, por cada palavra de incentivo, por todo carinho,
+        paciência e dedicação. Vocês foram fundamentais para que chegássemos até
+        aqui.
+      </p>
+      <p>
+        Encerramos esta etapa com orgulho e emoção, levando conosco lembranças,
+        aprendizados e laços que permanecerão para sempre.
+      </p>
     </section>
 
-<!-- Linha do Tempo: 1ºA, 1ºB e 2ºB -->
-<section class="linha-tempo">
-  <h2>📚 Onde tudo começou...</h2>
+    <!-- Linha do Tempo: 1ºA, 1ºB e 2ºB -->
+    <section class="linha-tempo">
+      <h2>📚 Onde tudo começou...</h2>
 
-  <div class="polaroid-container">
-    <div class="polaroid">
-      <img src="1A.jpg" alt="Turma 1ºA" title="Turma 1ºA" />
-      <p class="legenda-polaroid">
-        📘 1ºA — O início de muitas amizades e histórias!
-      </p>
-    </div>
+      <div class="polaroid-container">
+        <div class="polaroid">
+          <img src="1A.jpg" alt="Turma 1ºA" title="Turma 1ºA" />
+          <p class="legenda-polaroid">
+            📘 1ºA — O início de muitas amizades e histórias!
+          </p>
+        </div>
 
-    <div class="polaroid">
-      <img src="1B.jpg" alt="Turma 1ºB" title="Turma 1ºB" />
-      <p class="legenda-polaroid">
-        📗 1ºB — Onde os sonhos começaram a se desenhar!
-      </p>
-    </div>
+        <div class="polaroid">
+          <img src="1B.jpg" alt="Turma 1ºB" title="Turma 1ºB" />
+          <p class="legenda-polaroid">
+            📗 1ºB — Onde os sonhos começaram a se desenhar!
+          </p>
+        </div>
 
-    <div class="polaroid video-polaroid">
-      <video controls>
-        <source src="2B.mp4" type="video/mp4" />
-        Seu navegador não suporta a reprodução de vídeo.
-      </video>
-      <p class="legenda-polaroid">
-        💛 2ºB — A união que transformou tudo em amizade, risadas e conquistas!
-      </p>
-    </div>
-  </div>
-</section>
+        <div class="polaroid video-polaroid">
+          <video controls>
+            <source src="2B.mp4" type="video/mp4" />
+            Seu navegador não suporta a reprodução de vídeo.
+          </video>
+          <p class="legenda-polaroid">
+            💛 2ºB — A união que transformou tudo em amizade, risadas e
+            conquistas!
+          </p>
+        </div>
+      </div>
+    </section>
 
     <!-- Foto do trote dos velhinhos -->
     <div class="trote-container">
@@ -180,17 +181,18 @@
 
       <p>
         Um dia antes da realização da nossa <strong>Prova do SAEB</strong>, no
-        dia <strong>22/10/2025</strong>, recebemos uma surpresa que marcou
-        nossos corações. 💙 A nossa direção preparou,
-        com muito carinho, um vídeo com as nossas
-        <strong>futuras profissões</strong> — um gesto cheio de amor, emoção e
-        inspiração.
+        <strong>22/10/2025</strong>, recebemos uma surpresa que marcou nossos
+        corações. 💙 A nossa direção preparou, com muito carinho, um vídeo com
+        as <strong>nossas futuras profissões</strong> — um gesto cheio de amor,
+        emoção e inspiração. Mesmo que o Dia das Diretoras tenha sido na
+        quarta-feira, só agora, nesta sexta, estamos publicando esta homenagem
+        com todo nosso carinho. 💙
       </p>
 
       <p>
         Teve riso, teve choro, teve orgulho e, acima de tudo, teve o
-        reconhecimento do quanto a instituição transforma o nosso dia a dia. Esse
-        vídeo representa o impacto que o <strong>CEIMM</strong> e nossas
+        reconhecimento do quanto a instituição transforma o nosso dia a dia.
+        Esse vídeo representa o impacto que o <strong>CEIMM</strong> e nossas
         diretoras têm em cada um de nós.
       </p>
 
@@ -200,8 +202,8 @@
       </video>
 
       <p class="legenda-video">
-        💫 Um vídeo preparado com amor, pela <strong>direção</strong> — nossa inspiração. Agradecemos por acreditarem tanto em cada um de
-        nós. 💙
+        💫 Um vídeo preparado com amor, pela <strong>direção</strong> — nossa
+        inspiração. Agradecemos por acreditarem tanto em cada um de nós. 💙
       </p>
     </section>
 
@@ -215,11 +217,10 @@
         todo o amor e carinho pela <strong>Turma do 3º Ano B</strong>. 💙
       </p>
       <p>
-        E lembrando: como estava escrito na carta, vocês
-        <strong>precisam estar sendo gravadas neste momento</strong>, tá? 🎥 A
-        gente está em prova — realizando mais um passo rumo às nossas
-        universidades — mas queremos ver a reação de vocês quando receberem essa
-        surpresa.
+        Vocês <strong>precisam estar sendo gravadas neste momento</strong>, tá?
+        🎥 Mesmo que hoje já seja sexta-feira e nós não estejamos mais em prova,
+        queremos ver a reação de vocês recebendo essa homenagem preparada com
+        tanto carinho. 💙
       </p>
       <a
         href="https://drive.google.com/file/d/1OeOwTvU3zxSA7F18SFuecadlHN1Qi6TJ/view?usp=sharing"
@@ -284,7 +285,7 @@
         <h2>💛 Olá, queridas diretoras Liliana e Rosalba!</h2>
         <p>
           Já separaram o lencinho pra se emocionar? 🥹<br />
-          Já estão sendo gravadas neste momento? 🎥<br /><br />
+          Já estão sendo gravadas aí desse ladinho? 🎥<br /><br />
           Pois bem... podemos continuar então. 💙<br />
           <strong>Beijinhos da Turma do 3º Ano B!</strong>
         </p>
